Css fixes (#2014)
* fix double import

* Don't align table header to center

--- a/src/Ombi/ClientApp/styles/Themes/plex.scss
+++ b/src/Ombi/ClientApp/styles/Themes/plex.scss
@@ -1,5 +1,4 @@
-﻿@import '../base.scss';
-$primary-colour: #df691a;
+﻿$primary-colour: #df691a;
 $primary-colour-outline: #ff761b;
 $bg-colour: #333333;
 $bg-colour-disabled: #252424;
